fix: improve kbd colors for dark mode

--- a/src/style.css
+++ b/src/style.css
@@ -78,8 +78,9 @@
 	}
 
 	kbd {
-		@apply px-1.5 py-1 text-xs font-semibold text-zinc-800 bg-zinc-300 border border-zinc-200 rounded-md;
-		@apply dark:bg-zinc-600 dark:text-zinc-100 dark:border-zinc-500;
+		@apply px-1.5 py-1 text-xs font-semibold rounded-md;
+		@apply text-neutral-600 bg-neutral-100 border border-neutral-200;
+		@apply dark:text-neutral-300 dark:bg-neutral-800 dark:border-neutral-700;
 		@apply inline-flex items-baseline justify-center gap-0.5 leading-none;
 	}
 }
